<resources>
    <string name="app_name">SMARTSTOCK</string>
    <string name="title_home">BIENVENIDO!</string>
    <string name="next">Siguiente</string>
    <string name="hint_text">Introduce tu nombre.</string>
    <string name="hint_branch_text">Introduce el nombre de la sucursal.</string>
    <string name="create_profile">Crear perfil</string>
    <string name="add_product">Ingresar producto.</string>
    <string name="hint_name_p">Ingresa el nombre del producto.</string>
    <string name="hint_barcode">Ingresa el codigo de barra.</string>
    <string name="hint_count">Cantidad.</string>
    <string name="hint_date_day">DD.</string>
    <string name="hint_date_month">MM.</string>
    <string name="hint_date_year">YY.</string>
    <string name="btn_add_product">Agregar producto.</string>
    <string name="btn_scan">Buscar codigo.</string>
    <string name="delete_btn">Eliminar</string>
    <string name="add_new_sucursal">Agregar una nueva sucursal.</string>
    <string name="hint_user_name">Nombre de usuario.</string>
    <string name="hint_sucursal_name">Nombre de la sucursal.</string>
</resources>