<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/leaguespartanbold"
            android:gravity="center"
            android:text="@string/add_new_sucursal"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittextrounded"
            android:hint="@string/hint_user_name"
            android:inputType="text"

            android:padding="15dp" />

        <EditText
            android:id="@+id/etNewSucName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edittextrounded"
            android:hint="@string/hint_sucursal_name"
            android:inputType="text"

            android:padding="15dp" />

        <Button
            android:id="@+id/addNewSucBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/leaguespartanbold"
            android:text="Agregar sucursal"
            android:textSize="20sp" />


    </LinearLayout>


</androidx.cardview.widget.CardView>