<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_home"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/balsamiqsansregular"
        android:gravity="center|top"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:src="@drawable/supermarket"

            >

        </ImageView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


    </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/balsamiqsansregular"
            android:gravity="center|top"

            android:text="@string/title_home"
            android:textColor="@color/text_color"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="15dp"
            android:fontFamily="@font/balsamiqsansregular"
            android:background="@drawable/edittextrounded"
            android:hint="@string/hint_text"
            android:padding="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginHorizontal="50dp"
            android:backgroundTint="@color/btn_add_user"
            android:fontFamily="@font/balsamiqsansregular"
            android:text="@string/add_user"
            android:textColor="@color/text_color"
            android:textStyle="normal" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>